# STEALTH-TINKO

./: .dockerignore  .env.ci  .env.dev  .env.example  .env.prod  .env.staging  .gitignore  ACTIONABLE_TASKS.md  AUTH0_IMPLEMENTATION_SUMMARY.md  AUTH0_INTEGRATION_README.md  AZURE_DEPLOYMENT_GUIDE.md  COMPLETE_REMAINING_TASKS.md  CONSOLIDATED_DOCUMENTATION.md  CONSOLIDATION_SUMMARY.md  DASHBOARD_API_INTEGRATION_COMPLETE.md  DELIVERY_REPORT_20251019-013718.md  DOCKER_GUIDE.md  Dockerfile  FULLSTACK_COMPLETE.md  FULL_BUILD_PLAN.md  GMAIL_SMTP_SETUP.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SWA_SETUP.md  MANUAL_TEST_COMMANDS.md  OTP_GUIDE.md  OTP_TESTING_GUIDE.md  PHASE_1_DEMO_DATA_COMPLETE.md  PROJECT_CONTEXT.md  PROJECT_STATUS_AND_NEXT_STEPS.md  PROJECT_STATUS_SUMMARY.md  Procfile  QUICK_FIX_GUIDE.md  RAMS_AUTH_GUIDE.md  README.md  RETRY_001_COMPLETE.md  SECURITY_AUDIT_REPORT.md  SETUP_CREDENTIALS_GUIDE.md  SETUP_VERIFICATION.md  START_APPLICATION.md  TEST_SIGNUP_INSTRUCTIONS.md  (+46 more)
Stealth-Reecovery/: .env.backup.20251019-110039  .env.example  .gitattributes  .gitignore  APPLICATION_HEALTH_STATUS.txt  APPLICATION_STATUS_REPORT.md  CHANGELOG.md  CLI_NEXT_STEPS.sh  DELIVERY_ARTIFACTS_README.md  FINAL_SUCCESS_REPORT_20251019-013718.md  NEXT_STEPS.sh  PHASE_0_COMPLETE.md  PSP_001_COMPLETE.md  README.md  alembic.ini  consolidate_docs.py  docker-compose.yml  issues.yml  outstanding_work.fixed.json  outstanding_work.json  requirements.txt  smoke_test.py
_logs/: audit_session.txt  current_session.txt
api/: host.json  package.json
app/: .env  __init__.py  auth0_auth.py  config.py  (+12 more)
(+335 files in other folders)
